# framenote-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  imgui.ini  setup-deps.bat  setup-deps.sh
assets/: app_icon.rc
include/core/: Canvas.h  Document.h  DocumentTab.h  Frame.h  History.h  Layer.h  Palette.h  Selection.h  Timeline.h
include/io/: ExportOptions.h  ExportRasterUtils.h  FileDialog.h  FileManager.h  GifExporter.h  PngExporter.h  RecentFiles.h  RecoveryManager.h
include/renderer/: CanvasRenderer.h
include/tools/: EllipseTool.h  EraserTool.h  EyedropperTool.h  FillTool.h  LineTool.h  MoveTool.h  PencilTool.h  RectangleTool.h  SelectionPixelClip.h  SelectionTool.h  ShapeRasterizer.h  ToolManager.h
include/ui/: CanvasPanel.cpp  CanvasPanel.h  IconLoader.h  MainWindow.h  ModalUtils.h  PalettePanel.h  TabManager.h  Theme.h  TimelinePanel.h  ToolsPanel.h
src/: main.cpp
src/core/: Canvas.cpp  Document.cpp  DocumentTab.cpp  Frame.cpp  History.cpp  Layer.cpp  Palette.cpp  Selection.cpp  Timeline.cpp
src/io/: ExportRasterUtils.cpp  FileDialog.cpp  FileManager.cpp  GifExporter.cpp  PngExporter.cpp  RecentFiles.cpp  RecoveryManager.cpp
src/renderer/: CanvasRenderer.cpp
src/tools/: EllipseTool.cpp  EraserTool.cpp  EyedropperTool.cpp  FillTool.cpp  LineTool.cpp  MoveTool.cpp  PencilTool.cpp  RectangleTool.cpp  SelectionTool.cpp  ToolManager.cpp
src/ui/: CanvasPanel.cpp  CanvasPanelActions.cpp  CanvasPanelInput.cpp  CanvasPanelRender.cpp  IconLoader.cpp  MainWindow.cpp  MainWindowExport.cpp  PalettePanel.cpp  TabManager.cpp  Theme.cpp  TimelinePanel.cpp  ToolsPanel.cpp
